# ExtBTree

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
example/: CMakeLists.txt  main.cpp
include/: btree_map.h  btree_set.h
include/allocator/: allocator.h  poolAllocator.h
include/allocator/helpers/: mappedFile.h  metadata.h
include/btree/: btree.h  btreeException.h
include/btree/utils/: btreeAlgorithm.h
include/container/: btree_map.h  btree_set.h
include/container/helpers/: pair.h
src/: CMakeLists.txt
src/allocator/: poolAllocator.cpp
src/allocator/helpers/: mappedFile.cpp  metadata.cpp
src/btree/: btree.cpp
src/container/: btree_map.cpp  btree_set.cpp
tests/: CMakeLists.txt  btreeMapTests.cpp  main.cpp  mappedFileTests.cpp  metadataTests.cpp  poolAllocatorTests.cpp
